<?xml version="1.0"?>
<package format="2">
  <name>geomagic_virtual_wall</name>
  <version>0.0.0</version>
  <description>A simple virtual wall demo for Geomagic Touch</description>
  <maintainer email="user@todo.todo">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>geomagic_control</build_depend>
  <build_depend>visualization_msgs</build_depend>
  
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>geomagic_control</exec_depend>
</package>
