<?xml version="1.0"?>
<package format="2">
  <name>my_haptic_app</name>
  <version>0.0.1</version>
  <description>A clean package for haptic examples.</description>
  <maintainer email="user@todo.todo">melody</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geomagic_control</depend>
  <depend>visualization_msgs</depend>
</package>