<?xml version="1.0"?>
<package format="2">
  <name>ur5e_haptic_teleop</name>
  <version>0.0.0</version>
  <description>The ur5e_haptic_teleop package</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>omni_msgs</depend>

</package>